@@ -1018,6 +1018,17 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
 	 to be performed without the need of template specializations.
       </p>
 
+      <p><strong>A random number engine - Complete -</strong>
+         This library contains randow number generators with several different
+	 choices of distribution.
+      </p>
+
+      <p><strong>Tuples - Complete -</strong>
+         The tuple class implements small heterogeneous arrays.  This is an
+	 enhanced pair.  In fact, the standard pair is enhanced with a tuple
+	 interface.
+      </p>
+
       <p><strong>Fixed-size arrays - Complete -</strong>
          The array class implements small fixed-sized arrays with container
 	 semantics.
@@ -1029,12 +1040,6 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
 	 multimap, and multiset containers respectively.  These classes are
 	 suitable replacements for the SGI STL hash_map and hash_set
 	 extensions.
-      </p>
-
-      <p><strong>Tuples - Complete -</strong>
-         The tuple class implements small heterogeneous arrays.  This is an
-	 enhanced pair.  In fact, the standard pair is enhanced with a tuple
-	 interface.
       </p>
 
       <p><strong>C99 compatibility - Under construction - </strong>
@@ -1053,11 +1058,6 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
       <p><strong>A regular expression engine</strong>
          This library provides for regular expression objects with traversal
 	 of text with return of subexpressions.
-      </p>
-
-      <p><strong>A random number engine</strong>
-         This library contains randow number generators with several different
-	 choices of distribution.
       </p>
 
 <hr />
