@@ -837,6 +837,13 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
    type-dependent logic to be performed without the need of template
    specializations.
 
+   A random number engine - Complete - This library contains randow
+   number generators with several different choices of distribution.
+
+   Tuples - Complete - The tuple class implements small heterogeneous
+   arrays. This is an enhanced pair. In fact, the standard pair is
+   enhanced with a tuple interface.
+
    Fixed-size arrays - Complete - The array class implements small
    fixed-sized arrays with container semantics.
 
@@ -845,10 +852,6 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
    versions of the map, set, multimap, and multiset containers
    respectively. These classes are suitable replacements for the SGI STL
    hash_map and hash_set extensions.
-
-   Tuples - Complete - The tuple class implements small heterogeneous
-   arrays. This is an enhanced pair. In fact, the standard pair is
-   enhanced with a tuple interface.
 
    C99 compatibility - Under construction - There are many features
    designed to minimize the divergence of the C and the C++ languages.
@@ -863,9 +866,6 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
    A regular expression engine This library provides for regular
    expression objects with traversal of text with return of
    subexpressions.
-
-   A random number engine This library contains randow number generators
-   with several different choices of distribution.
      _________________________________________________________________
 
 5.6 Is libstdc++-v3 thread-safe?
